[package]
name = "skiplistdb"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/skiplistdb"
homepage = "https://github.com/al8n/skiplistdb"
documentation = "https://docs.rs/skiplistdb"
description = "A template for creating Rust open-source repo on GitHub"
license = "MIT/Apache-2.0"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = []

[dependencies]
crossbeam-skiplist = "0.1"
either = "1"
mwmr = { path = "../txn/mwmr" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
