[package]
name = "skiplistdb"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/al8n/skiplistdb"
homepage = "https://github.com/al8n/skiplistdb"
documentation = "https://docs.rs/skiplistdb"
description = "Blazing fast ACID, MVCC and SSI in memory database based on lock-free skiplist."
license = "MIT/Apache-2.0"

[[bench]]
path = "benches/foo.rs"
name = "foo"
harness = false

[features]
default = []
future = ["mwmr/future"]

smol = ["mwmr/smol", "future"]
tokio = ["mwmr/tokio", "future"]
async-std = ["mwmr/async-std", "future"]

[dependencies]
cheap-clone = "0.1"
crossbeam-skiplist = "0.1"
either = "1"
mwmr = { git = "https://github.com/al8n/txn", branch = "main" }

[dev-dependencies]
criterion = "0.5"
tempfile = "3"

[profile.bench]
opt-level = 3
debug = false
codegen-units = 1
lto = 'thin'
incremental = false
debug-assertions = false
overflow-checks = false
rpath = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
